--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Main.js",
   "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha Tailor.test.js"
   },
   "repository": {
     "type": "git",
